[gd_scene load_steps=2 format=3 uid="uid://cmapselect"]

[ext_resource type="Script" path="res://scripts/ui/map_select.gd" id="1_script"]

[node name="MapSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12, 0.12, 0.18, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="CenterContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.2, 1)
theme_override_font_sizes/font_size = 28
text = "Map Editor"
horizontal_alignment = 1

[node name="NewMapBtn" type="Button" parent="CenterContainer/VBox"]
custom_minimum_size = Vector2(160, 36)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 14
text = "+ New Map"

[node name="ScrollContainer" type="ScrollContainer" parent="CenterContainer/VBox"]
custom_minimum_size = Vector2(700, 400)
layout_mode = 2

[node name="MapGrid" type="GridContainer" parent="CenterContainer/VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 12
columns = 4

[node name="BackBtn" type="Button" parent="CenterContainer/VBox"]
custom_minimum_size = Vector2(120, 36)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 14
text = "< Back"

[connection signal="pressed" from="CenterContainer/VBox/NewMapBtn" to="." method="_on_new_map_pressed"]
[connection signal="pressed" from="CenterContainer/VBox/BackBtn" to="." method="_on_back_pressed"]
